crates/ui-macros/tests/compile-fail/context_menu_empty.rs
use poly_ui_macros::context_menu;

#[context_menu()]
fn SomeComponent() {}
