crates/ui-macros/tests/compile-fail/context_menu_empty.stderr
error: `#[context_menu(...)]` requires exactly one argument: `Foo` (menu type), `None` (opt-out), `allow_default` (native menu), or `inherit` (forward to parent).
 --> tests/compile-fail/context_menu_empty.rs:3:1
  |
3 | #[context_menu()]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `context_menu` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compile-fail/context_menu_empty.rs:4:22
  |
4 | fn SomeComponent() {}
  |                      ^ consider adding a `main` function to `$DIR/tests/compile-fail/context_menu_empty.rs`
